# iai-gazebo-models

./: .gitignore  README.md
src/oshkosh_model/: CMakeLists.txt  package.xml
src/oshkosh_model/Assets/Oshkosh/: Oshkosh_Wheel.dae  Suspension.dae  Suspension_back.dae
src/oshkosh_model/cfg/: oshkosh_model.cfg  oshkosh_wheels_drive.cfg  oshkosh_wheels_shaft_dumping.cfg  oshkosh_wheels_steer.cfg
src/oshkosh_model/launch/: oshkosh_controller.launch  oshkosh_empty_world.launch  oshkosh_follower_controller.launch  oshkosh_old_empty_world.launch  oshkosh_old_empty_world.launch~  oshkosh_velodyne16_empty_world.launch  oshkosh_velodyne_empty_world.launch
src/oshkosh_model/sdf_models/oshkosh/: model.sdf  oshkosh.sdf
src/oshkosh_model/sdf_models/oshkosh/sdf_assets/: Body.xml  Steering.xml  Suspension.xml  Wheels.xml  Wheels.xml~
src/oshkosh_model/sdf_models/oshkosh_dany/: model.config  oshkosh.sdf
src/oshkosh_model/sdf_models/oshkosh_old/: model.config  model.sdf
src/oshkosh_model/sdf_models/oshkosh_velodyne16/: model.config
src/oshkosh_model/sdf_models/oshkosh_velodyne_16/: BuildSDFModelFromAssets.sh  model.config  model.sdf
src/oshkosh_model/sdf_models/oshkosh_wheels_shaft_back/: oshkosh_wheels_shaft_back.sdf
src/oshkosh_model/sdf_models/oshkosh_wheels_shaft_front/: oshkosh_wheels_shaft_front.sdf
src/oshkosh_model/sdf_models/velodyne_16/: model.sdf
src/oshkosh_model/src/: CMD_VEL_Direct_Control.py  oshkosh_TF_pub_plugin.cc  oshkosh_break_test.py  oshkosh_driving_plugin.1.cc  oshkosh_driving_plugin.cc  oshkosh_path_controller.py  oshkosh_vel_controller.py  oshkosh_wheel_drive_plugin.cc  oshkosh_wheel_shaft_suspension_plugin.cc  oshkosh_wheel_steer_plugin.cc  oshkosh_wp_controller.py  transform_broadcaster.py
src/oshkosh_model/worlds/: oshkosh_empty.world  oshkosh_old_empty.world  oshkosh_velodyne16_empty.world  oshkosh_velodyne_empty.world
(+161 files in other folders)
